--- a/faq-en.html
+++ b/faq-en.html
@@ -2,74 +2,173 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Frequently Asked Questions about PARCEL.ONE - Cross-border eCommerce shipping solutions." />
   <title>PARCEL.ONE FAQ</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  
   <style>
+    /* Reset & base */
+    * {
+      box-sizing: border-box;
+    }
     body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
       margin: 0;
-      padding: 2rem;
-      background-color: #f9f9f9;
+      font-family: 'Inter', Arial, sans-serif;
+      background-color: #f4f6fb;
       color: #333;
+      line-height: 1.6;
     }
-    h1 {
+    a {
       color: #004aad;
+      text-decoration: none;
     }
-    h2 {
-      color: #222;
-      margin-top: 2rem;
+    a:hover {
+      text-decoration: underline;
     }
-    .faq-item {
-      margin-bottom: 1.5rem;
+    ul {
+      padding-left: 1.25rem;
     }
-    .language-switcher {
-      position: absolute;
-      top: 1rem;
-      right: 2rem;
+    
+    /* Container */
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 2rem 1rem 4rem;
     }
+
+    /* Header */
+    header {
+      background: #004aad;
+      color: white;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      box-shadow: 0 2px 8px rgb(0 0 0 / 0.1);
+    }
+    header img.logo {
+      height: 40px;
+    }
+    header h1 {
+      font-weight: 600;
+      font-size: 1.5rem;
+      margin: 0;
+    }
+    
+    /* Language Switcher */
     .language-switcher a {
       margin-left: 1rem;
-      text-decoration: none;
-      font-weight: bold;
+      font-weight: 600;
       display: inline-flex;
       align-items: center;
-      color: #004aad;
+      color: white;
+      padding: 0.3rem 0.6rem;
+      border-radius: 4px;
+      background-color: rgba(255 255 255 / 0.15);
+      transition: background-color 0.3s ease;
+    }
+    .language-switcher a:hover {
+      background-color: rgba(255 255 255 / 0.35);
     }
     .language-switcher img {
-      height: 16px;
-      width: 24px;
+      width: 20px;
+      height: 14px;
       margin-right: 0.4rem;
+      border-radius: 2px;
+      object-fit: cover;
+    }
+
+    /* FAQ heading */
+    .faq-title {
+      margin-top: 2rem;
+      margin-bottom: 1.5rem;
+      color: #004aad;
+      font-weight: 700;
+      font-size: 2rem;
+      text-align: center;
+    }
+
+    /* FAQ items */
+    .faq-item {
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 3px 8px rgb(0 0 0 / 0.1);
+      padding: 1.5rem 2rem;
+      margin-bottom: 1.5rem;
+      transition: box-shadow 0.3s ease;
+    }
+    .faq-item:hover {
+      box-shadow: 0 6px 16px rgb(0 0 0 / 0.15);
+    }
+    .faq-item h2 {
+      margin-top: 0;
+      margin-bottom: 0.8rem;
+      color: #004aad;
+      font-weight: 600;
+      font-size: 1.25rem;
+    }
+    .faq-item p, .faq-item ul {
+      margin: 0.5rem 0 0 0;
+      color: #444;
+      font-size: 1rem;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      .container {
+        padding: 1rem;
+      }
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.75rem;
+      }
+      header h1 {
+        font-size: 1.25rem;
+      }
+      .language-switcher a {
+        padding: 0.25rem 0.5rem;
+        font-size: 0.9rem;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="language-switcher">
-    <a href="faq-en.html"><img src="https://flagcdn.com/gb.svg" alt="English" />EN</a>
-    <a href="index.html"><img src="https://flagcdn.com/de.svg" alt="Deutsch" />DE</a>
-  </div>
+  <header>
+    <img class="logo" src="https://parcel.one/assets/img/logo.svg" alt="PARCEL.ONE Logo" />
+    <h1>FAQ</h1>
+    <nav class="language-switcher" aria-label="Language switcher">
+      <a href="faq-en.html" aria-current="page" aria-label="English"><img src="https://flagcdn.com/gb.svg" alt="English flag" />EN</a>
+      <a href="index.html" aria-label="Deutsch"><img src="https://flagcdn.com/de.svg" alt="German flag" />DE</a>
+    </nav>
+  </header>
 
-  <h1>PARCEL.ONE – Frequently Asked Questions</h1>
+  <main class="container" role="main">
+    <h2 class="faq-title">Frequently Asked Questions (FAQ)</h2>
 
-  <div class="faq-item">
-    <h2>1. What is PARCEL.ONE?</h2>
-    <p>PARCEL.ONE is a German logistics company specializing in international shipping for online retailers. By connecting to over 100 delivery partners worldwide, PARCEL.ONE ensures your packages are delivered reliably, quickly, and cost-effectively to over 200 countries.</p>
-  </div>
+    <section class="faq-item" tabindex="0">
+      <h2>1. What is PARCEL.ONE?</h2>
+      <p>PARCEL.ONE is a German logistics company specializing in international shipping for online retailers. By connecting to over 100 delivery partners worldwide, PARCEL.ONE ensures your packages are delivered reliably, quickly, and cost-effectively to over 200 countries.</p>
+    </section>
 
-  <div class="faq-item">
-    <h2>2. How does PARCEL.ONE work?</h2>
-    <p>Online retailers send their packages to a central warehouse in Germany. There, they are scanned, consolidated, and routed via algorithms to the best shipping partner in the destination country. The goal is to shorten delivery times and reduce returns through intelligent routing.</p>
-  </div>
+    <section class="faq-item" tabindex="0">
+      <h2>2. How does PARCEL.ONE work?</h2>
+      <p>Online retailers send their packages to a central warehouse in Germany. There, they are scanned, consolidated, and routed via algorithms to the best shipping partner in the destination country. The goal is to shorten delivery times and reduce returns through intelligent routing.</p>
+    </section>
 
-  <div class="faq-item">
-    <h2>3. Which countries does PARCEL.ONE ship to?</h2>
-    <p>Shipping is available to over 200 countries, including all EU states, the UK, the USA, Canada, China, Australia, and many more. Delivery is carried out by established local partners such as La Poste, Royal Mail, USPS, or Correos.</p>
-  </div>
+    <section class="faq-item" tabindex="0">
+      <h2>3. Which countries does PARCEL.ONE ship to?</h2>
+      <p>Shipping is available to over 200 countries, including all EU states, the UK, the USA, Canada, China, Australia, and many more. Delivery is carried out by established local partners such as La Poste, Royal Mail, USPS, or Correos.</p>
+    </section>
 
-  <div class="faq-item">
-    <h2>4. What shipping services does PARCEL.ONE offer?</h2>
-    <p>Our services include:
+    <section class="faq-item" tabindex="0">
+      <h2>4. What shipping services does PARCEL.ONE offer?</h2>
+      <p>Our services include:</p>
       <ul>
         <li>Tracked and untracked shipments</li>
         <li>Delivery to home, parcel locker, or pickup location</li>
@@ -77,95 +176,90 @@
         <li>Return options with labels</li>
         <li>API-supported data connection for tracking & customs</li>
       </ul>
-    </p>
-  </div>
+    </section>
 
-  <div class="faq-item">
-    <h2>5. Can small online shops use PARCEL.ONE?</h2>
-    <p>Yes. There are no minimum volumes. Our scalable solutions are ideal for startups as well as established shops. You benefit from transparent pricing and easy onboarding.</p>
-  </div>
+    <section class="faq-item" tabindex="0">
+      <h2>5. Can small online shops use PARCEL.ONE?</h2>
+      <p>Yes. There are no minimum volumes. Our scalable solutions are ideal for startups as well as established shops. You benefit from transparent pricing and easy onboarding.</p>
+    </section>
 
-  <div class="faq-item">
-    <h2>6. How can I integrate PARCEL.ONE with my shop system?</h2>
-    <p>You have several options:
+    <section class="faq-item" tabindex="0">
+      <h2>6. How can I integrate PARCEL.ONE with my shop system?</h2>
+      <p>You have several options:</p>
       <ul>
         <li>Ready-made plugins for Shopify, WooCommerce, or Magento</li>
         <li>REST API for custom integrations</li>
         <li>Manual CSV upload in the dashboard</li>
       </ul>
-    </p>
-  </div>
+    </section>
 
-  <div class="faq-item">
-    <h2>7. Is shipment tracking available?</h2>
-    <p>Yes. All tracked shipments receive a tracking number with real-time status on a unified tracking page – optimized for mobile and multilingual display.</p>
-  </div>
+    <section class="faq-item" tabindex="0">
+      <h2>7. Is shipment tracking available?</h2>
+      <p>Yes. All tracked shipments receive a tracking number with real-time status on a unified tracking page – optimized for mobile and multilingual display.</p>
+    </section>
 
-  <div class="faq-item">
-    <h2>8. How fast is international shipping?</h2>
-    <p>
+    <section class="faq-item" tabindex="0">
+      <h2>8. How fast is international shipping?</h2>
+      <p>Delivery times vary depending on the destination country, local holidays, and customs processing:</p>
       <ul>
         <li>Within Europe: 2–5 business days</li>
         <li>North America: 5–8 business days</li>
         <li>Worldwide: 7–12 business days</li>
       </ul>
-      Delivery times depend on destination country, local holidays, and customs processing.
-    </p>
-  </div>
+    </section>
 
-  <div class="faq-item">
-    <h2>9. What happens if a package is lost or damaged?</h2>
-    <p>You can file a claim within 7 business days of delivery issues. Photos (if damaged), an invoice, and the tracking number are required. Claims are processed promptly.</p>
-  </div>
+    <section class="faq-item" tabindex="0">
+      <h2>9. What happens if a package is lost or damaged?</h2>
+      <p>You can file a claim within 7 business days of delivery issues. Photos (if damaged), an invoice, and the tracking number are required. Claims are processed promptly.</p>
+    </section>
 
-  <div class="faq-item">
-    <h2>10. Are returns supported?</h2>
-    <p>Yes. You can generate return labels. Customers drop off returns locally. Packages are consolidated and regularly returned to you. Automated return processes via API are also possible.</p>
-  </div>
+    <section class="faq-item" tabindex="0">
+      <h2>10. Are returns supported?</h2>
+      <p>Yes. You can generate return labels. Customers drop off returns locally. Packages are consolidated and regularly returned to you. Automated return processes via API are also possible.</p>
+    </section>
 
-  <div class="faq-item">
-    <h2>11. What does shipping with PARCEL.ONE cost?</h2>
-    <p>Prices vary by destination, weight, service level, and shipping volume. We provide personalized quotes. Contact our sales team or use our price calculator.</p>
-  </div>
+    <section class="faq-item" tabindex="0">
+      <h2>11. What does shipping with PARCEL.ONE cost?</h2>
+      <p>Prices vary by destination, weight, service level, and shipping volume. We provide personalized quotes. Contact our sales team or use our price calculator.</p>
+    </section>
 
-  <div class="faq-item">
-    <h2>12. How is customs clearance handled?</h2>
-    <p>We support DDP & DDU including:
+    <section class="faq-item" tabindex="0">
+      <h2>12. How is customs clearance handled?</h2>
+      <p>We support DDP & DDU including:</p>
       <ul>
         <li>Automatic HS code assignment</li>
         <li>Creation of customs forms (CN22, CN23)</li>
         <li>Pre-submission of data according to ICS2 / EU regulations</li>
       </ul>
-      Our processes ensure fast and compliant import clearance.
-    </p>
-  </div>
+      <p>Our processes ensure fast and compliant import clearance.</p>
+    </section>
 
-  <div class="faq-item">
-    <h2>13. What makes PARCEL.ONE different from traditional carriers?</h2>
-    <p>PARCEL.ONE is not a shipping carrier but a logistics network with intelligent routing. Instead of a fixed route, we use the best local partner per shipment. This means fewer returns, faster delivery, and better tracking – all without switching systems.</p>
-  </div>
+    <section class="faq-item" tabindex="0">
+      <h2>13. What makes PARCEL.ONE different from traditional carriers?</h2>
+      <p>PARCEL.ONE is not a shipping carrier but a logistics network with intelligent routing. Instead of a fixed route, we use the best local partner per shipment. This means fewer returns, faster delivery, and better tracking – all without switching systems.</p>
+    </section>
 
-  <div class="faq-item">
-    <h2>14. How do I contact support?</h2>
-    <p>
+    <section class="faq-item" tabindex="0">
+      <h2>14. How do I contact support?</h2>
       <ul>
-        <li>Email: <a href=\"mailto:support@parcel.one\">support@parcel.one</a></li>
+        <li>Email: <a href="mailto:support@parcel.one">support@parcel.one</a></li>
         <li>Phone: +49 (0) 6404 697 9000 (Mon–Fri, 9am–6pm CET)</li>
         <li>Via the dashboard: Submit tickets</li>
       </ul>
-    </p>
-  </div>
+    </section>
 
-  <div class="faq-item">
-    <h2>15. Is there a client dashboard?</h2>
-    <p>Yes. The dashboard provides:
+    <section class="faq-item" tabindex="0">
+      <h2>15. Is there a client dashboard?</h2>
+      <p>The dashboard provides:</p>
       <ul>
         <li>Shipment status and tracking overview</li>
         <li>Label creation and CSV upload</li>
         <li>Invoices, reports, and performance data</li>
         <li>Support tickets and damage claims</li>
       </ul>
-      Visit: <a href=\"https://dashboard.parcel.one\">dashboard.parcel.one</a></p>
-  </div>
+      <p>Visit: <a href="https://dashboard.parcel.one">dashboard.parcel.one</a></p>
+    </section>
+  </main>
 </body>
 </html>
+
